# disell

./: README.md  disell_example.ipynb  pyproject.toml  readthedocs.yaml
.github/workflows/: build.yml
docs/: api.rst  conf.py  index.rst  requirements.txt  tutorial.rst
github/workflows/: build.yml
src/cpp/: CMakeLists.txt  bindings.cpp  flood_fill_2d.cpp  flood_fill_3d.cpp
src/disell/: __init__.py  cell_identification.py  cell_statistics.py  flood_fill_probabilities.py  properties.py  region_growing.py  registration.py  segmentation_module.py  visualization.py
